<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".LoginAcivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >

        <LinearLayout
            android:id="@+id/ll_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/_25dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin180"
                android:background="@drawable/login_bg"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin135"
                    android:src="@drawable/logo"
                    android:layout_marginTop="@dimen/_5dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="J U B I C A R E   A S S I S T A N T"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_20"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/margin20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/user_name"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/text_12" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin45"
                    android:layout_marginTop="@dimen/_10dp"
                    android:drawableRight="@drawable/username"
                    android:inputType="text"
                    android:paddingLeft="@dimen/_10dp"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/text_16" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_15dp"
                    android:text="@string/Password"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/text_12" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin45"
                    android:layout_marginTop="@dimen/_10dp"
                    android:drawableRight="@drawable/password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/_10dp"
                    android:singleLine="true"
                    android:textSize="@dimen/text_16" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cb_showPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/_20dp"
                android:text="@string/show_password" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll1"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/margin20"
                android:background="@drawable/buttonsap"
                android:padding="@dimen/margin14"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/margin18" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16" />

            <LinearLayout
                android:id="@+id/ll_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_forgot_password"
                        android:layout_marginTop="@dimen/_5dp"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/text_16" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:gravity="center"
                        android:text="@string/signup"
                        android:textColor="@color/colorBlue"
                        android:textSize="@dimen/text_16" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!--include developed by-->
    <include layout="@layout/common_company_name" />

</RelativeLayout>
