<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/it_s_okay_reset_your_password"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:visibility="visible" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_3dp"
            android:fontFamily="@font/robotoregular"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/menuTextColor"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_of_edittext"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etMobileNo"
                style="@style/StyleTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/robotoregular"
                android:inputType="number"
                android:maxLength="10"
                android:padding="@dimen/margin12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/resetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/buttonsap"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/margin18" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>