<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_3dp"
            android:fontFamily="@font/robotoregular"
            android:text="@string/enter_old_password"
            android:textColor="@color/menuTextColor"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_of_edittext"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etOldPassword"
                style="@style/StyleTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/robotoregular"
                android:padding="@dimen/margin12" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_3dp"
            android:fontFamily="@font/robotoregular"
            android:text="@string/enter_new_password"
            android:textColor="@color/menuTextColor"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_of_edittext"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNewPassword"
                style="@style/StyleTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/robotoregular"
                android:padding="@dimen/margin12" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_3dp"
            android:fontFamily="@font/robotoregular"
            android:text="@string/enter_confirm_password"
            android:textColor="@color/menuTextColor"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_of_edittext"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etConfirmPassword"
                style="@style/StyleTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/robotoregular"
                android:padding="@dimen/margin12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/buttonsap"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textSize="@dimen/_18sp"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>