<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_10dp"
    tools:context=".NotAssignedAppointments">

    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/service_search_view"
        >

        <EditText
            android:id="@+id/etSearchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/search_by_mobile_or_aadhaar"
            android:padding="@dimen/margin10"
            android:textColor="@color/colorGray"
            android:inputType="number"
            android:textSize="@dimen/text_14" />

        <ImageView
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="@drawable/list_search_bg"
            android:padding="@dimen/margin10"
            android:paddingStart="@dimen/margin20"
            android:paddingEnd="@dimen/margin20"
            android:src="@drawable/ic_search" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_add_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        >

        <TextView
            android:id="@+id/tv_list_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textStyle="italic"
            android:text=""
            android:layout_centerVertical="true"
            android:textColor="@color/black" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_not_appointment_assigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tvNoDataFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data_found"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/btn_go_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_home"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:paddingLeft="@dimen/_5dp"
            android:paddingRight="@dimen/_5dp"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_go_home_shape"
            android:visibility="gone"
            android:layout_below="@id/tvNoDataFound"
            android:layout_marginTop="@dimen/margin5"
            />

    </RelativeLayout>

</LinearLayout>